[package]
name = "rcu_list"
version = "0.1.0"
edition = "2021"

[dependencies]
rcu_cell = "1.1.6"
crossbeam-utils = "0.8.20"

[dev-dependencies]
scc = "2.2.5"
seize = "0.4.9"
criterion = "0.3.5"
parking_lot = "0.12"
crossbeam-epoch = "0.9.8"
crossbeam-queue = "0.3.11"

[[bench]]
name = "stack"
harness = false

[[bench]]
name = "queue"
harness = false